package org.dorkmaster.scanner.agent.cmd;

public interface Command {

}
