package org.dorkmaster.scanner.zeromq;

/**
 * Created by mjackson on 11/9/16.
 */
public enum PeerType {
    UPDATER, CONTROLLER, AGENT
}
