@startuml

interface Peer {
    String id()
    long port()
    PeerType type()
}

Controller <|- Peer
Agent <|- Peer
Updater <|- Peer

interface Command

PingCmd <|-- Command
PongCmd <|-- Command
ReScanCmd <|-- Command

ScanCmd <|-- Command
class ScanCmd {
    - String path
    - int[] hashes
}
FileCmd <|-- Command
class FileCmd {
    - String path
    - String name
    - Long size
    - Hash[] hashes
}

UpdateCmd <|-- Command
class UpdateCmd {
    - FileCmd file
    + Update asModel()
}

class CommandFactory {
    Command parseCommand(String cmd)
}

EventBus : void register(Handler handler)
EventBus : void submit(Object obj)
EventBusImpl <|-- EventBus

interface Handler
Handler : boolean canHandle(Object obj)
Handler : void process(Object obj)

enum PeerType {
UPDATER
CONTROLLER
AGENT
}

@enduml